horizontal scroll fix

--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -144,40 +144,40 @@
 
 @media screen and (max-width: 320px) {
     .about-me {
-        padding: 70px 14px 0 14px;
+      padding: 70px 14px 0 14px;
     }
-
+  
     .about-me__title {
-        margin-bottom: 60px;
-        padding-bottom: 28px;
-        font-size: 18px;
+      margin-bottom: 60px;
+      padding-bottom: 28px;
+      font-size: 18px;
     }
-
+  
     .about-me__bio-wrapper {
-        flex-direction: column-reverse;
-        align-items: center;
+      flex-direction: column-reverse;
+      align-items: center;
     }
-
+  
     .about-me__photo {
-        margin-bottom: 40px;
-        width: 292px;
-        height: 352px;
+      margin-bottom: 40px;
+      width: 292px;
+      height: auto;
     }
-
+  
     .about-me__bio-title {
-        margin-bottom: 20px;
-        font-size: 30px;
-        line-height: 1.2;
+      margin-bottom: 20px;
+      font-size: 30px;
+      line-height: 1.2;
     }
-
+  
     .about-me__bio-subtitle {
-        font-size: 11px;
-        line-height: 1.45;
+      font-size: 11px;
+      line-height: 1.45;
     }
-
+  
     .about-me__bio-text {
-        margin-bottom: 40px;
-        font-size: 11px;
-        line-height: 1.45;
+      margin-bottom: 40px;
+      font-size: 11px;
+      line-height: 1.45;
     }
-}
+  }
